# milionerzy

./: .gitignore  README.md  compose.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  README.md  env.d.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: AnswerLabel.vue  PrizeLabel.vue
frontend/src/router/: index.ts
frontend/src/stores/: counter.ts  question.ts
frontend/src/views/: ControllerView.vue  HomeView.vue  PanelView.vue  PrizesView.vue  QuestionView.vue
