[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tower = "0.5.2"
tokio = {version = "1.43.0", features = ["full"]}
tokio-postgres = {version = "0.7.12"}
socketioxide = {version = "0.16.1"}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }